--- a/tri_index.html
+++ b/tri_index.html
@@ -27,7 +27,7 @@
 <body>
     
 <!-- Rooms -->
-<div class="ourRooms">
+<div class="tripify_header ourRooms">
   <div class="container-fluid">
     <div class="tr_header">
         <div class="head-elements centered">
