Summary package modified

--- a/tri_selection.html
+++ b/tri_selection.html
@@ -257,7 +257,8 @@
             <div class="container">
                 <div class="copyCol">
                     <p class="pull-left">&copy; 2016 <b>KINGDOM</b> All rights reserved.</p>
-                    <a class="pull-right" id="scrollup" href="javascript:void(0);"><i class="fa fa-angle-up" aria-hidden="true"></i> To Top</a> </div>
+                    <a class="pull-right" id="scrollup" href="javascript:void(0);"><i class="fa fa-angle-up" aria-hidden="true"></i> To Top</a> 
+                </div>
             </div>
         </div>
 
