--- a/tri_tour_packages.html
+++ b/tri_tour_packages.html
@@ -367,7 +367,7 @@
             </div>
             <div class="row margin-50">
                 <div class="col-lg-7 col-centered check-in">
-                    <h2 class="color-y">Pick <b>sightseeing route in Munnar</b></h2>
+                    <h2 class="color-y bounce">Pick <b>sightseeing route in Munnar</b></h2>
                     <div>
                         <div class="col-xs-2">
                             <section id="first" class="section">
